--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vuex": "^4.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.11",
     "@vitejs/plugin-vue": "^5.2.4",
     "vite": "^6.2.0"
   }
